--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,8 +1,4 @@
 ja:
-  time:
-    formats:
-      default: "%Y年%m月%d日"
-
 
   date:
     abbr_day_names:
@@ -35,10 +31,6 @@ ja:
       - 木曜日
       - 金曜日
       - 土曜日
-    formats:
-      default: "%Y/%m/%d"
-      long: "%Y年%m月%d日(%a)"
-      short: "%m/%d"
     month_names:
       -
       - 1月
@@ -54,16 +46,12 @@ ja:
       - 11月
       - 12月
 
-  time:
-    am: 午前
-    formats:
-      default: "%Y年%m月%d日(%a)"
-      long: "%Y/%m/%d %H:%M"
-      short: "%m/%d %H:%M"
-    pm: 午後
-
 
 ja:
+  time:
+    formats:
+      default: "%Y年%m月%d(%a)"
+
   activerecord:
     attributes:
       recipe_food:
