[Update]献立の非同期化

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -52,6 +52,10 @@ ja:
     formats:
       default: "%Y年%m月%d(%a)"
 
+  simple_calendar:
+    previous: "<<"
+    next: ">>"
+
   activerecord:
     attributes:
       recipe_food:
