[Fix]材料名登録非同期フラッシュメッセージ追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -72,6 +72,9 @@ ja:
         food: 材料名
         quantity: 分量
 
+      food:
+        food_name: 材料名
+
       menu:
         start_time: 日にち
         recipe: レシピ名
